--- a/style.css
+++ b/style.css
@@ -144,17 +144,8 @@ hr{
     font-size: 20px;
 }
 
-.li-color{
 
-    padding: 1rem;
-    flex-direction: column;
-    max-width: 1200px;
-    margin: 0 auto;  
-    height: 24vh;	
-    background-color: var(--off-white);
-    border-radius: 80px;
-}
-.lii{
+/* .lii{
    padding: 1rem;
     flex-direction: column;
     max-width: 1200px;
@@ -162,4 +153,13 @@ hr{
     height: 25vh;	
     padding: 1px;
     margin-bottom: 20px;
+} */ 
+
+.li-color{
+    
+    padding: 19px;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    background-color: var(--off-white);
+    border-radius: 50px;
 }
