--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ hr{
 .list-item-inline{
  display: inline;
  padding: 0rem 0.5rem;
+ font-size: 1.4rem;
 }
 
 /**navigation**/
@@ -75,6 +76,9 @@ hr{
 }
 .navigation .link-active{
     font-weight: bold;
+}
+.nav-brand{
+    font-size: 1.3rem;
 }
 
 /*header*/
